# FileSearch2

./: README.md
AzureApi0_2/: Cargo.toml
AzureApi0_2/TcpSockets/: Cargo.toml
AzureApi0_2/TcpSockets/src/: lib.rs
AzureApi0_2/TcpSockets/src/Commands/src/: lib.rs
AzureApi0_2/src/: main.rs
AzureApi0_2/src/AzureApi/: Cargo.toml
AzureApi0_2/src/AzureApi/src/: lib.rs
AzureApi0_2/src/Embeddings/: Cargo.toml
AzureApi0_2/src/Embeddings/src/: lib.rs
AzureApi0_2/src/EmbeddingsServer/: Cargo.toml
AzureApi0_2/src/TcpSockets/src/: lib.rs
AzureApi0_2/src/TcpSockets/src/Commands/src/: lib.rs
DB_service/: Cargo.toml  database.db
DB_service/src/: main.rs
DB_service/src/Commands/src/: lib.rs
DB_service/src/TcpSockets/src/Commands/src/: lib.rs
DB_service/src/db/src/: database.rs
DirWalker/: Cargo.toml
DirWalker/src/: main.rs
DirWalker/src/TcpSockets/src/: lib.rs
DirWalker/src/TcpSockets/src/Commands/: Cargo.toml
DirWalker/src/TcpSockets/src/Commands/src/: lib.rs
DirWalker/src/file_system/src/: dir_walker.rs
GUI/: Cargo.toml
GUI/src/: main.rs
GUI/src/TcpSockets/src/Commands/src/: lib.rs
MainApp/: Cargo.toml
MainApp/src/: main.rs
MainApp/src/TcpSockets/: Cargo.toml
MainApp/src/TcpSockets/src/: lib.rs
MainApp/src/TcpSockets/src/Commands/src/: lib.rs
Storage/: Cargo.toml
Storage/src/: main.rs
Storage/src/TcpSockets/src/: lib.rs
