workspace = { members = ["src/TcpSockets", "src/db", "src/TcpSockets/src/Commands"] }
[package]
name = "DB_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = {path = "src/db"}
TcpSockets = {path = "src/TcpSockets"}
Commands = {path = "src/TcpSockets/src/Commands"}
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
