workspace = { members = ["src/TcpSockets", "src/TcpSockets/src/Commands", "src/file_system"] }

[package]
name = "DirWalker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
TcpSockets = {path = "src/TcpSockets"}
Commands = {path = "src/TcpSockets/src/Commands"}
file_system = {path = "src/file_system"}
tokio = "1.37.0"