workspace = { members = ["src/TcpSockets", "src/TcpSockets/src/Commands"] }
[package]
name = "MainApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
TcpSockets = { path = "src/TcpSockets" }
Commands = {path = "src/TcpSockets/src/Commands"}
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }