workspace = {members = ["src/TcpSockets", "src/TcpSockets/src/Commands", "src/arc_str"]}
[package]
name = "Storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
TcpSockets = {path = "src/TcpSockets"}
Commands = {path = "src/TcpSockets/src/Commands"}
arc_str = {path = "src/arc_str"}

tokio = "1.37.0"
